# exprob_ass2

./: CMakeLists.txt  README.md  final_ontology_inferred.owl  gggggggggggg.owl  package.xml
action/: Target.action
common/: domain.pddl  new_problem.pddl  plan.pddl  problem.pddl
config/: cluedo_robot.srdf
docs/html/: annotated.html  check__complete_8cpp.html  check__complete_8cpp__incl.map  check__complete_8cpp__incl.md5  check__complete_8h_source.html  check__consistency_8cpp.html  check__consistency_8cpp__incl.map  check__consistency_8cpp__incl.md5  check__consistency_8h_source.html  check__hypothesis_8py.html  class_k_c_l__rosplan_1_1_check_complete_interface-members.html  class_k_c_l__rosplan_1_1_check_complete_interface.html  class_k_c_l__rosplan_1_1_check_complete_interface__inherit__graph.map  class_k_c_l__rosplan_1_1_check_complete_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_check_consistency_interface-members.html  class_k_c_l__rosplan_1_1_check_consistency_interface.html  class_k_c_l__rosplan_1_1_check_consistency_interface__coll__graph.map  class_k_c_l__rosplan_1_1_check_consistency_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_go_home_interface-members.html  class_k_c_l__rosplan_1_1_go_home_interface.html  class_k_c_l__rosplan_1_1_go_home_interface__coll__graph.md5  class_k_c_l__rosplan_1_1_go_home_interface__inherit__graph.map  class_k_c_l__rosplan_1_1_go_oracle_interface-members.html  class_k_c_l__rosplan_1_1_go_oracle_interface.html  class_k_c_l__rosplan_1_1_go_oracle_interface__inherit__graph.map  class_k_c_l__rosplan_1_1_go_oracle_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_go_to_waypoint_interface-members.html  class_k_c_l__rosplan_1_1_go_to_waypoint_interface.html  class_k_c_l__rosplan_1_1_go_to_waypoint_interface__coll__graph.map  class_k_c_l__rosplan_1_1_go_to_waypoint_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_leave_home_interface-members.html  class_k_c_l__rosplan_1_1_leave_home_interface.html  class_k_c_l__rosplan_1_1_leave_home_interface__inherit__graph.map  class_k_c_l__rosplan_1_1_leave_home_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_leave_oracle_interface-members.html  class_k_c_l__rosplan_1_1_leave_oracle_interface.html  class_k_c_l__rosplan_1_1_leave_oracle_interface__coll__graph.md5  class_k_c_l__rosplan_1_1_leave_oracle_interface__inherit__graph.map  class_k_c_l__rosplan_1_1_move_arm_interface-members.html  class_k_c_l__rosplan_1_1_move_arm_interface.html  (+68 more)
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+6 more)
docs/latex/: annotated.tex  check__complete_8cpp.tex  check__complete_8cpp__incl.md5  check__consistency_8cpp.tex  check__consistency_8cpp__incl.md5  check__hypothesis_8py.tex  class_k_c_l__rosplan_1_1_check_complete_interface.tex  class_k_c_l__rosplan_1_1_check_complete_interface__coll__graph.md5  class_k_c_l__rosplan_1_1_check_consistency_interface.tex  class_k_c_l__rosplan_1_1_check_consistency_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_go_home_interface.tex  class_k_c_l__rosplan_1_1_go_home_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_go_oracle_interface.tex  class_k_c_l__rosplan_1_1_go_oracle_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_go_to_waypoint_interface.tex  class_k_c_l__rosplan_1_1_go_to_waypoint_interface__coll__graph.md5  class_k_c_l__rosplan_1_1_leave_home_interface.tex  class_k_c_l__rosplan_1_1_leave_home_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_leave_oracle_interface.tex  class_k_c_l__rosplan_1_1_leave_oracle_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_move_arm_interface.tex  class_k_c_l__rosplan_1_1_move_arm_interface__coll__graph.md5  class_k_c_l__rosplan_1_1_oracle_interface.tex  class_k_c_l__rosplan_1_1_oracle_interface__inherit__graph.md5  class_k_c_l__rosplan_1_1_start_game_interface.tex  class_k_c_l__rosplan_1_1_start_game_interface__coll__graph.md5  files.tex  go__home_8cpp.tex  go__home_8cpp__incl.md5  go__oracle_8cpp.tex  go__oracle_8cpp__incl.md5  go__to__point_8py.tex  go__to__waypoint_8cpp.tex  go__to__waypoint_8cpp__incl.md5  hierarchy.tex  hints_8py.tex  leave__home_8cpp.tex  leave__home_8cpp__incl.md5  leave__oracle_8cpp.tex  leave__oracle_8cpp__incl.md5  (+11 more)
include/exprob_ass2/: check_complete.h  check_consistency.h  check_hypothesis.h  go_home.h  go_oracle.h  go_to_waypoint.h  leave_home.h  leave_oracle.h  move_arm.h  oracle.h  start_game.h
launch/: assignment.launch  chomp_planning_pipeline.launch.xml  cluedo_robot.launch  cluedo_robot_gazebo.launch  cluedo_robot_moveit.launch  cluedo_robot_moveit_controller_manager.launch.xml  cluedo_robot_rviz.launch  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  plan_services.launch  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  rosplan.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
pddl/: domain.pddl  problem.pddl
scripts/: check_hypothesis.py  go_to_point.py  hint_reciever.py  hints.py  menage_ontology.py  plan_execution.py  save.py
src/: check_complete.cpp  check_consistency.cpp  check_hypothesis.cpp  go_home.cpp  go_oracle.cpp  go_to_waypoint.cpp  leave_home.cpp  leave_oracle.cpp  move_arm.cpp  move_arm2.cpp  oracle.cpp  simulation.cpp  start_game.cpp
srv/: Command.srv  Complete.srv  Consistent.srv  HypoFound.srv  WinHypo.srv
urdf/: cluedo_robot.gazebo  cluedo_robot.urdf  cluedo_robot.xacro
